
add_library(ImGui OBJECT imgui.cpp
                        ../Headers/imgui.h
                        ../Headers/imconfig.h
                        ../Headers/imstb_truetype.h
                        ../Headers/imgui_internal.h
                        ../Headers/imstb_rectpack.h
                        ../Headers/imstb_textedit.h
                        ../Headers/imgui_impl_glfw.h
                        ../Headers/imgui_impl_opengl3.h				
						imgui_menu.cpp
						ImGui_FileManager.cpp
						ImGui_FileManager.hpp						
						imgui_draw.cpp
						imgui_tables.cpp 
						imgui_widgets.cpp
						ImGui_Imple/imgui_impl_glfw.cpp
						ImGui_Imple/imgui_impl_opengl3.cpp	
						)


